--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -64,4 +64,4 @@ custom_proxy_group= 漏网之鱼`select`*`[] 节点选择`[] 自动选择`[] 手
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
 enable_rule_generator=true
-overwrite_original_rules=trueSimple_Clash.ini
+overwrite_original_rules=true
