--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -1,1 +1,67 @@
+[custom]
+;-----------------------------------------------------------------------------------------------------------------------------------
+ruleset= 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+ruleset= Amazon,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
+ruleset= 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset= 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gog/Gog.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PlayStation/PlayStation.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Rockstar/Rockstar.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
+ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
+ruleset= Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
+ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOHK/HBOHK.list
+ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Niconico/Niconico.list
+ruleset= 欧美视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BBC/BBC.list
+ruleset= 欧美视频媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DAZN.list
+ruleset= 欧美视频媒体,https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Clash/ParamountPlus/ParamountPlus.list
+ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Deezer/Deezer.list
+ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
+ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
+ruleset= 国外音乐媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TIDAL.list
+ruleset= HBOMAX,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
+ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
+ruleset= 漏网之鱼,[]FINAL
+ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
+ruleset= 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMaxNoIP/ChinaMaxNoIP.list
+ruleset= 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
+ruleset= 全球直连,[]GEOIP,CN
+ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 
+
+;-----------------------------------------------------------------------------------------------------------------------------------
+custom_proxy_group= 节点选择`select`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 手动切换`select`.*
+custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+;-----------------------------------------------------------------------------------------------------------------------------------
+custom_proxy_group= Amazon`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 哔哩哔哩`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= DisneyPlus`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Game`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Google`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 国外音乐媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= HBOMAX`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Microsoft`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Netflix`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 欧美视频媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Telegram`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 亚洲视频媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= YouTube`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+;-----------------------------------------------------------------------------------------------------------------------------------
+custom_proxy_group= 全球直连`select`[] DIRECT
+custom_proxy_group= 漏网之鱼`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+
+;-----------------------------------------------------------------------------------------------------------------------------------
+enable_rule_generator=true
+overwrite_original_rules=true
