--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -41,26 +41,26 @@ ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 节点选择`select`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 节点选择`select`.*`[]自动选择`[]手动切换`[]DIRECT
 custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= Amazon`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= 哔哩哔哩`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= DisneyPlus`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= Game`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= Google`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= 国外音乐媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= HBOMAX`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= Microsoft`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= Netflix`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= 欧美视频媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= Telegram`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= 亚洲视频媒体`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
-custom_proxy_group= YouTube`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= Amazon`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 哔哩哔哩`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= DisneyPlus`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Game`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Google`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 国外音乐媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= HBOMAX`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Microsoft`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Netflix`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 欧美视频媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Telegram`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 亚洲视频媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= YouTube`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 全球直连`select`[] DIRECT
-custom_proxy_group= 漏网之鱼`select`[] 节点选择`[] 自动选择`[] 手动切换`[] DIRECT`.*
+custom_proxy_group= 全球直连`select`[]DIRECT
+custom_proxy_group= 漏网之鱼`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
 enable_rule_generator=true
