--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -29,7 +29,7 @@ ruleset= 全球直连,[]GEOIP,CN
 ruleset= 漏网之鱼,[]FINAL
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 节点选择`select`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 节点选择`select`[]自动选择`[]手动切换`[]DIRECT
 custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
