--- a/Clash/Clash.ini
+++ b/Clash/Clash.ini
@@ -40,7 +40,7 @@ ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 节点选择`select`.*`[]自动选择`[]手动切换`[]DIRECT
+custom_proxy_group= 节点选择`select`[]自动选择`[]手动切换`[]DIRECT
 custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
