--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -11,6 +11,7 @@ ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mas
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
+ruleset= Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Niconico/Niconico.list
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
@@ -36,6 +37,7 @@ custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204
 custom_proxy_group= Amazon`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Game`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Google`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= 国外音乐媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= HBOMAX`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
