--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -22,7 +22,8 @@ ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset= 节点选择,https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/ProxyLite.list
+ruleset= 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset= 节点选择,https://raw.githubusercontent.com/Melencolia11514/A-host-collection/main/Clash/Others.ini
 ruleset= 漏网之鱼,[]FINAL
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
