--- a/Clash/Others.ini
+++ b/Clash/Others.ini
@@ -5,6 +5,7 @@ DOMAIN-SUFFIX,elastic.com
 DOMAIN-SUFFIX,gcr.io
 DOMAIN-SUFFIX,gitlab.com
 DOMAIN-SUFFIX,gitlab.io
+DOMAIN-SUFFIX,heroku.com
 DOMAIN-SUFFIX,jitpack.io
 DOMAIN-SUFFIX,maven.org
 DOMAIN-SUFFIX,medium.com
