--- a/Clash/Others.ini
+++ b/Clash/Others.ini
@@ -1,11 +1,12 @@
 DOMAIN-SUFFIX,apache.org
+DOMAIN-SUFFIX,apkmirror.com
 DOMAIN-SUFFIX,docker.com
 DOMAIN-SUFFIX,elastic.co
 DOMAIN-SUFFIX,elastic.com
 DOMAIN-SUFFIX,gcr.io
 DOMAIN-SUFFIX,gitlab.com
-DOMAIN-SUFFIX,gitlab.io
-DOMAIN-SUFFIX,heroku.com
+DOMAIN-SUFFIX,gitlab.com
+DOMAIN-KEYWORD,heroku
 DOMAIN-SUFFIX,jitpack.io
 DOMAIN-SUFFIX,maven.org
 DOMAIN-SUFFIX,medium.com
