--- a/Clash/Others.ini
+++ b/Clash/Others.ini
@@ -7,6 +7,7 @@ DOMAIN-SUFFIX,gcr.io
 DOMAIN-SUFFIX,gitlab.com
 DOMAIN-SUFFIX,gitlab.com
 DOMAIN-KEYWORD,heroku
+DOMAIN-SUFFIX,hostloc.com
 DOMAIN-SUFFIX,jitpack.io
 DOMAIN-SUFFIX,maven.org
 DOMAIN-SUFFIX,medium.com
