--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -16,14 +16,14 @@ ruleset= 亚洲视频媒体,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TIDAL.list
-ruleset= HBOMAX,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
+ruleset= HBOMAX,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.list
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset= 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset= 节点选择,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others.ini
+ruleset= 节点选择,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others.list
 ruleset= 漏网之鱼,[]FINAL
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
