--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -18,7 +18,7 @@ ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset= 国外音乐媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TIDAL.list
 ruleset= 美洲媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.list
-ruleset= 美洲媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
+ruleset= 美洲媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.ini
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
