--- a/Clash/Simple_Clash.ini
+++ b/Clash/Simple_Clash.ini
@@ -22,9 +22,9 @@ ruleset= 美洲媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-C
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
+ruleset= Star++,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset= YouTube,https://raw.githubusercontent.com/HotKids/Rules/master/Clash/RuleSet/Star%2B%2B.yaml
 ruleset= 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset= 节点选择,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others.list
 ruleset= 漏网之鱼,[]FINAL
@@ -45,6 +45,7 @@ custom_proxy_group= Netflix`select`[]节点选择`[]自动选择`[]手动切换`
 custom_proxy_group= Telegram`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= 亚洲视频媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= YouTube`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= Star++`select`[]节点选择
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 
