--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -35,18 +35,17 @@ custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= Amazon`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
-custom_proxy_group= 北美流媒体`select`.*
 custom_proxy_group= DisneyPlus`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Game`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Google`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
-custom_proxy_group= 国外音乐流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
-custom_proxy_group= 南美流媒体`select`.*
 custom_proxy_group= Netflix`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
-custom_proxy_group= Star++`select`.*
 custom_proxy_group= Telegram`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
-custom_proxy_group= 亚洲流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= YouTube`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 北美流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 国外音乐流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 南美流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 亚洲流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
