--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -1,6 +1,5 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
-ruleset= Amazon,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
@@ -23,6 +22,7 @@ ruleset= 国外音乐流媒体,https://raw.githubusercontent.com/blackmatrix7/io
 ruleset= 国外音乐流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TIDAL.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
+ruleset= 亚马逊,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
 ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Niconico/Niconico.list
 ruleset= 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
@@ -34,7 +34,6 @@ custom_proxy_group= 节点选择`select`[]自动选择`[]手动切换`[]DIRECT
 custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= Amazon`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Game`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= Google`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
@@ -45,6 +44,7 @@ custom_proxy_group= YouTube`select`[]节点选择`[]自动选择`[]手动切换`
 custom_proxy_group= 北美流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= 国外音乐流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= 南美流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
+custom_proxy_group= 亚马逊`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 custom_proxy_group= 亚洲流媒体`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]节点选择`[]自动选择`[]手动切换`[]DIRECT`.*
