--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -4,7 +4,7 @@ ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
-ruleset= 亚洲流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ViuTV.list
+ruleset= 欧洲流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
@@ -40,7 +40,7 @@ custom_proxy_group= Telegram`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= YouTube`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 北美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 南美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= 亚洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 欧洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]节点选择`[]DIRECT`.*
 
