--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -2,9 +2,10 @@
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
-ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.list
+ruleset= 南美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
 ruleset= 欧洲流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
+ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
@@ -41,6 +42,7 @@ custom_proxy_group= YouTube`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 北美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 南美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 欧洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 亚洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]节点选择`[]DIRECT`.*
 
