--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -2,7 +2,7 @@
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
-ruleset= 南美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
+ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
 ruleset= 欧洲流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
 ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
