--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -2,10 +2,11 @@
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
+ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOUSA/HBOUSA.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
 ruleset= 欧洲流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
+ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
-ruleset= HBO,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/HBO.ini
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
 ruleset= YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
@@ -33,7 +34,6 @@ custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Game`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Google`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= HBO`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Netflix`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Steam`select`[]自动选择`[]节点选择`[]DIRECT`.*
@@ -42,6 +42,7 @@ custom_proxy_group= YouTube`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 北美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 南美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 欧洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 亚洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]节点选择`[]DIRECT`.*
 
