--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -1,6 +1,8 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset= 北美流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AppleNews.list
+ruleset= 北美流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AppleTV.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
@@ -16,10 +18,11 @@ ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mas
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PlayStation/PlayStation.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset= Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
-ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
 ruleset= Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset= Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset= Xbox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset= 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
@@ -31,6 +34,7 @@ custom_proxy_group= 节点选择`select`[]自动选择`[]手动切换`[]DIRECT
 custom_proxy_group= 手动切换`select`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
+custom_proxy_group= Apple`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Game`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Google`select`[]自动选择`[]节点选择`[]DIRECT`.*
@@ -38,6 +42,7 @@ custom_proxy_group= Microsoft`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Netflix`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Steam`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Telegram`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= Xbox`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= YouTube`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 北美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= 南美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
