--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -3,6 +3,7 @@
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleNews/AppleNews.list
+ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/T-mobile.list
 ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
 ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
