--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -1,14 +1,15 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
-ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
-ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
-ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleNews/AppleNews.list
-ruleset= 北美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/T-mobile.list
-ruleset= 北美流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
-ruleset= 南美流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
-ruleset= 南美流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
-ruleset= 欧洲流媒体,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
-ruleset= 亚洲流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
+ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleNews/AppleNews.list
+ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
+ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
+ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/T-mobile.list
+ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others-US.list
+ruleset= 南美路线,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
+ruleset= 南美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
+ruleset= 欧洲路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
+ruleset= 亚洲路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
@@ -45,10 +46,10 @@ custom_proxy_group= Steam`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Telegram`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= Xbox`select`[]自动选择`[]节点选择`[]DIRECT`.*
 custom_proxy_group= YouTube`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= 北美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= 南美流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= 欧洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
-custom_proxy_group= 亚洲流媒体`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 北美路线`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 南美路线`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 欧洲路线`select`[]自动选择`[]节点选择`[]DIRECT`.*
+custom_proxy_group= 亚洲路线`select`[]自动选择`[]节点选择`[]DIRECT`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]节点选择`[]DIRECT`.*
 
