--- a/Clash/Config/Simple_Clash.ini
+++ b/Clash/Config/Simple_Clash.ini
@@ -1,8 +1,9 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
-ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleNews/AppleNews.list
+ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/AppleNews.list
 ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
+ruleset= 北美路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
 ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/T-mobile.list
 ruleset= 北美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others-US.list
@@ -10,6 +11,7 @@ ruleset= 南美路线,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset= 南美路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
 ruleset= 欧洲路线,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
 ruleset= 亚洲路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBOAsia/HBOAsia.list
+ruleset= 亚洲路线,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset= DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset= Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetflixIP.list
