--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -38,15 +38,15 @@ custom_proxy_group= 节点选择`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
+custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Game`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
-custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
-custom_proxy_group= Spotify`select`[]自动选择`[]DIRECT`[]东南亚节点`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
+custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
+custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
+custom_proxy_group= Spotify`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Steam`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Telegram`select`[]自动选择`[]北美节点`[]狮城节点`[]西欧节点
-custom_proxy_group= Xbox`select`[]自动选择`[]DIRECT
+custom_proxy_group= Xbox`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
 custom_proxy_group= YouTube`select`[]自动选择`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 北美节点`select`(美国|US|United States|加拿大|CA|Canda)
