--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -51,7 +51,7 @@ custom_proxy_group= YouTube`select`[]自动选择`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 北美节点`select`(美国|US|United States|加拿大|CA|Canda)
 custom_proxy_group= 东南亚节点`select`(菲律宾|PH|Philippines|泰国|TH|Thailand|印度|IN|India|马来西亚|MY|Malaysia|印度尼西亚|ID|Indonesia|越南|VN|Vietnam)
-custom_proxy_group= 东欧节点`select`(乌克兰|UA|Ukraine|俄罗斯|RU|Russia|摩瓦多尔|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
+custom_proxy_group= 东欧节点`select`(乌克兰|UA|Ukraine|俄罗斯|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
 custom_proxy_group= 韩国节点`url-test`(韩国|KR|Korea|KOR|首尔)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 南美节点`select`(阿根廷|AR|Argentina|巴西|BR|Brazil|智利|CL|Chile)
 custom_proxy_group= 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
