--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -47,7 +47,7 @@ custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点
 custom_proxy_group= Game`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
-custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点`[]非洲节点
+custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点`[]尼日利亚节点
 custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= OneDrive`select`[]自动选择`[]DIRECT
 custom_proxy_group= Music`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
